--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="./public/style_i.css">
 </head>
 <body>
-    <div>
+    <div class="coverDiv" >
         <div class="outercontainer">
             <div class="heading">
                 <h1>VISHWAS SADAN PG</h1>
+                    <ul class="list">
+                        <li><a class="list_item" href="/">Home</a></li>
+                        <li><a class="list_item" href="/">About</a></li>
+                        <li><a class="list_item" href="/">Sign in</a></li>
+                    </ul>
             </div>
-            <div class="Menu">
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Sign in</li>
-                </ul>
+            <div class="about">
+                <p>Welcome to Vishwas Sadan, a well-equipped boys-only PG located just a 5-minute walk from Graphic Era Deemed to be University and 10 minutes from Graphic Era Hill University. With 10 rooms, including 9 two-person rooms and 1 three-person room, we provide a comfortable and focused living environment for serious students. Our facilities include a food mess, 24/7 uninterrupted water supply, and electricity with inverter backup to ensure your stay is hassle-free. We prioritize cleanliness with regular bathroom cleaning every week and offer quick assistance whenever needed. To maintain a safe and study-friendly atmosphere, visitors are only allowed with valid purposes. Vishwas Sadan is your ideal choice for a peaceful and productive student life.</p>
             </div>
-            <!-- <div class="about">
-                <p>Welcome to Vishwas Sadan, a well-equipped boys-only PG located just a 5-minute walk from Graphic Era Deemed to be University and 10 minutes from Graphic Era Hill University. With 10 rooms, including 9 two-person rooms and 1 three-person room, we provide a comfortable and focused living environment for serious students. Our facilities include a 24/7 food mess, uninterrupted water supply, and electricity with inverter backup to ensure your stay is hassle-free. We prioritize cleanliness with regular bathroom cleaning every week and offer quick assistance whenever needed. To maintain a safe and study-friendly atmosphere, visitors are only allowed with valid purposes. Vishwas Sadan is your ideal choice for a peaceful and productive student life.</p>
-            </div> -->
+            <!-- <hr class="hr_footer"> -->
         </div>
+        <div class="footer">
+            <p class="footer_p">&copy; PG groups 2024</p> 
+         </div>
     </div>
 </body>
 </html>
