home page and css

--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./public/style_i.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="coverDiv" >
         <div class="outercontainer">
             <div class="heading">
-                <h1>VISHWAS SADAN PG</h1>
-                    <ul class="list">
+                    <h1 class="libre-baskerville-bold">VISHWAS SADAN PG</h1>
+                    <ul class="list libre-baskerville-regular">
                         <li><a class="list_item" href="/">Home</a></li>
                         <li><a class="list_item" href="/">About</a></li>
                         <li><a class="list_item" href="/">Sign in</a></li>
                     </ul>
             </div>
-            <div class="about">
-                <p>Welcome to Vishwas Sadan, a well-equipped boys-only PG located just a 5-minute walk from Graphic Era Deemed to be University and 10 minutes from Graphic Era Hill University. With 10 rooms, including 9 two-person rooms and 1 three-person room, we provide a comfortable and focused living environment for serious students. Our facilities include a food mess, 24/7 uninterrupted water supply, and electricity with inverter backup to ensure your stay is hassle-free. We prioritize cleanliness with regular bathroom cleaning every week and offer quick assistance whenever needed. To maintain a safe and study-friendly atmosphere, visitors are only allowed with valid purposes. Vishwas Sadan is your ideal choice for a peaceful and productive student life.</p>
+            <div class="about libre-baskerville-regular">
+                <p class="about_p">Welcome to Vishwas Sadan, a well-equipped boys-only PG located just a 5-minute walk from Graphic Era Deemed to be University and 10 minutes from Graphic Era Hill University. With 10 rooms, including 9 two-person rooms and 1 three-person room, we provide a comfortable and focused living environment for serious students. Our facilities include a food mess, 24/7 uninterrupted water supply, and electricity with inverter backup to ensure your stay is hassle-free. We prioritize cleanliness with regular bathroom cleaning every week and offer quick assistance whenever needed. To maintain a safe and study-friendly atmosphere, visitors are only allowed with valid purposes. Vishwas Sadan is your ideal choice for a peaceful and productive student life.</p>
             </div>
             <!-- <hr class="hr_footer"> -->
         </div>
